--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Add the dependency for the Firebase Core Flutter SDK
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.8
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
